<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.gosdev</groupId>
  <artifactId>chatpointsttv</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>
  <name>ChatPointsTTV</name>
  <url>https://github.com/GospelBG/ChatPointsTTV</url>
  <modules>
    <module>core</module>
    <module>craftbukkit_1_12_R1</module>
    <module>craftbukkit_1_9_R1</module>
    <module>dist</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <relocations>
                <relocation>
                  <pattern>org.bstats</pattern>
                  <shadedPattern>me.gosdev.chatpointsttv.libraries.bstats</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.github.twitch4j</pattern>
                  <shadedPattern>me.gosdev.chatpointsttv.libraries.twitch4j</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.github.philippheuer.events4j</pattern>
                  <shadedPattern>me.gosdev.chatpointsttv.libraries.events4j</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.fasterxml.jackson</pattern>
                  <shadedPattern>me.gosdev.chatpointsttv.libraries.jackson</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <properties>
      <revision>2.4</revision>
      <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <repositories>
      <repository>
          <id>spigot-repo</id>
          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
      </repository>
      <repository>
        <id>maven-snapshots</id>
        <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
      </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <version>3.0.2</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.github.philippheuer.events4j</groupId>
      <artifactId>events4j-handler-simple</artifactId>
      <version>0.12.2</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.github.twitch4j</groupId>
      <artifactId>twitch4j</artifactId>
      <version>1.23.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20240303</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.alessiodp.libby</groupId>
      <artifactId>libby-bukkit</artifactId>
      <version>877bdfb</version> <!-- There's an issue with the latest version on Maven Central, so we need to use a build from the latest commit -->
      <scope>compile</scope>
  </dependency>
  </dependencies>
</project>